main-app/gke-manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: random-string-svc
  namespace: main-app
spec:
  type: NodePort
  selector:
    app: random-string
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 3000
